<resources>
    <string name="app_name">SampleApp_part</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="email_hint">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="forgot_your_password">ForgetPassword</string>
    <string name="don_t_have_an_account_register_now">RegisterNow</string>
    <string name="register_now">Register</string>
    <string name="already_have_an_account_login_now">LoginNow</string>
</resources>